[gd_scene load_steps=11 format=3 uid="uid://dp6enlglx2hh3"]

[ext_resource type="Texture2D" uid="uid://dcdmoy1pmc5sp" path="res://assets/outro.png" id="1_qon84"]
[ext_resource type="Script" uid="uid://bimuy86v0qvxe" path="res://outro/outro.gd" id="1_qrkbx"]
[ext_resource type="Texture2D" uid="uid://bjioqgdfapo8k" path="res://assets/outro 1.png" id="2_knpnh"]
[ext_resource type="Texture2D" uid="uid://b1fiqyhx83b0r" path="res://assets/outro 2.png" id="3_qrkbx"]
[ext_resource type="Texture2D" uid="uid://d1qyby2qxebdj" path="res://assets/outro 3.png" id="4_htew8"]
[ext_resource type="Texture2D" uid="uid://be3q8iycscacf" path="res://assets/outro 4.png" id="5_vo6ur"]
[ext_resource type="Texture2D" uid="uid://dns0alu2kp0bo" path="res://assets/outro 5.png" id="6_dp0ir"]
[ext_resource type="Texture2D" uid="uid://dcieaaxq02gyk" path="res://assets/outro 6.png" id="7_e5vjn"]
[ext_resource type="Texture2D" uid="uid://byiyvjx66bq5a" path="res://assets/restart_btn.png" id="9_htew8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_crwes"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_knpnh")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qrkbx")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_htew8")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vo6ur")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_dp0ir")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_e5vjn")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}]

[node name="Outro" type="Node2D"]
script = ExtResource("1_qrkbx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.75, 0.632813)
texture = ExtResource("1_qon84")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(576.11, 324.5)
scale = Vector2(0.600114, 0.600926)
sprite_frames = SubResource("SpriteFrames_crwes")
animation = &"6"

[node name="Button" type="Button" parent="."]
offset_left = 428.0
offset_top = 304.0
offset_right = 2356.0
offset_bottom = 1392.0
scale = Vector2(0.148849, 0.148849)
icon = ExtResource("9_htew8")
flat = true

[node name="Button2" type="Button" parent="."]
offset_left = -151.0
offset_top = -72.0
offset_right = 1235.0
offset_bottom = 674.0
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="button_up" from="Button2" to="." method="_on_button_2_button_up"]
